k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-war
  namespace: demo
  labels:
    app: java-war
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-war
  template:
    metadata:
      labels:
        app: java-war
    spec:
      containers:
        - name: java-war
          # TODO: replace with your pushed image
          image: java-war-demo:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
