k8s/app/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-war-svc-nodeport
  namespace: demo
  labels:
    app: java-war
spec:
  selector:
    app: java-war
  ports:
    - name: http
      port: 8080
      targetPort: http
      nodePort: 30080
  type: NodePort
