k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-war-svc
  namespace: demo
  labels:
    app: java-war
spec:
  selector:
    app: java-war
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
