k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-war-ingress
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
    - host: java.demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-war-svc
                port:
                  number: 8080
